--- a/.github/workflows/local-deployment.yml
+++ b/.github/workflows/local-deployment.yml
@@ -1,271 +1,3 @@
-# name: Local MLOps Deployment
-
-# on:
-#   workflow_dispatch:
-
-# env:
-#   PYTHON_VERSION: '3.10'
-
-# jobs:
-#   setup-model:
-#     name: Setup Production Model
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout Repository
-#         uses: actions/checkout@v4
-      
-#       - name: Setup Python
-#         uses: actions/setup-python@v4
-#         with:
-#           python-version: ${{ env.PYTHON_VERSION }}
-#           cache: 'pip'
-      
-#       - name: Install Dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements-deploy.txt
-      
-#       - name: Create Required Directories
-#         run: |
-#           echo "📁 Creating deployment directories..."
-#           mkdir -p deployment/models
-#           ls -la deployment/
-#           echo "✅ Directories created"
-      
-#       - name: Create .env File
-#         run: |
-#           echo "DATABRICKS_HOST=${{ secrets.DATABRICKS_HOST }}" >> .env
-#           echo "DATABRICKS_TOKEN=${{ secrets.DATABRICKS_TOKEN }}" >> .env
-#           echo "MODEL_NAME=workspace.ml_credit_risk.credit_risk_model_random_forest" >> .env
-#           echo "MODEL_ALIAS=Production" >> .env
-#           echo "USE_SERVING_ENDPOINT=true" >> .env
-#           echo "SERVING_ENDPOINT_NAME=credit-risk-model-random_forest-prod" >> .env
-#           echo "🔎 Using SERVING_ENDPOINT_NAME=$(grep SERVING_ENDPOINT_NAME .env | cut -d'=' -f2)"
-#           cat .env
-
-#       - name: Setup Model (Endpoint or Download)
-#         run: |
-#           python deployment/pull_production_model.py
-
-#       - name: Verify Model Setup
-#         run: |
-#           echo "📂 checking deployment/models ..."
-#           ls -la deployment/models || echo "⚠️ models folder missing"
-
-#           if [ -f "deployment/models/endpoint_config.json" ]; then
-#             echo "✅ Serving endpoint configured"
-#             cat deployment/models/endpoint_config.json
-#           else
-#             echo "❌ endpoint_config.json not found"
-#             echo "📋 Current directory structure:"
-#             find deployment -type f || echo "No files found"
-#             exit 1
-#           fi
-
-#       - name: Upload Model Artifacts
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: production-model
-#           path: deployment/models/
-#           retention-days: 7
-
-#   test-api:
-#     name: Test API Service
-#     runs-on: ubuntu-latest
-#     needs: setup-model
-    
-#     steps:
-#       - name: Checkout Repository
-#         uses: actions/checkout@v4
-      
-#       - name: Setup Python
-#         uses: actions/setup-python@v4
-#         with:
-#           python-version: ${{ env.PYTHON_VERSION }}
-#           cache: 'pip'
-      
-#       - name: Install Dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
-      
-#       - name: Create Required Directories
-#         run: |
-#           echo "📁 Creating deployment directories..."
-#           mkdir -p deployment/models
-#           ls -la deployment/
-      
-#       - name: Download Model Artifacts
-#         uses: actions/download-artifact@v4
-#         with:
-#           name: production-model
-#           path: deployment/models/
-      
-#       - name: Create .env File
-#         run: |
-#           echo "DATABRICKS_HOST=${{ secrets.DATABRICKS_HOST }}" >> .env
-#           echo "DATABRICKS_TOKEN=${{ secrets.DATABRICKS_TOKEN }}" >> .env
-#           echo "MODEL_NAME=workspace.ml_credit_risk.credit_risk_model_random_forest" >> .env
-#           echo "MODEL_ALIAS=Production" >> .env
-#           echo "USE_SERVING_ENDPOINT=true" >> .env
-#           echo "SERVING_ENDPOINT_NAME=credit-risk-model-random_forest-prod" >> .env
-#           echo "API_HOST=0.0.0.0" >> .env
-#           echo "API_PORT=8000" >> .env
-#           echo "🔎 Using SERVING_ENDPOINT_NAME=$(grep SERVING_ENDPOINT_NAME .env | cut -d'=' -f2)"
-          
-#           # Copy .env to deployment directory for app.py
-#           cp .env deployment/.env
-          
-#           cat .env
-
-#       - name: Check Model Configuration
-#         run: |
-#           echo "📋 Checking model configuration..."
-          
-#           if [ -f "deployment/models/endpoint_config.json" ]; then
-#             echo "✅ Using Databricks Serving Endpoint"
-#             cat deployment/models/endpoint_config.json | python -m json.tool
-#           elif [ -d "deployment/models/production_model" ]; then
-#             echo "✅ Using Local Model"
-#             ls -la deployment/models/production_model/
-#           else
-#             echo "❌ No model configuration found"
-#             echo "📋 Files in deployment/models:"
-#             ls -la deployment/models/ || echo "Directory is empty"
-#             exit 1
-#           fi
-      
-#       - name: Start API Service
-#         run: |
-#           cd deployment
-#           nohup python app.py > api.log 2>&1 &
-#           echo $! > api.pid
-#           sleep 10
-      
-#       - name: Check API Health
-#         run: |
-#           cd deployment
-#           MAX_RETRIES=5
-#           for i in $(seq 1 $MAX_RETRIES); do
-#             if curl -f http://localhost:8000/health; then
-#               echo "✅ API is healthy"
-#               exit 0
-#             fi
-#             echo "⏳ Waiting for API... ($i/$MAX_RETRIES)"
-#             sleep 5
-#           done
-#           echo "❌ API health check failed"
-#           cat api.log
-#           exit 1
-      
-#       - name: Test API Functionality
-#         run: |
-#           echo "Testing /model/info..."
-#           curl -f http://localhost:8000/model/info | python -m json.tool
-
-#           echo "Testing full API script..."
-#           python deployment/test_api.py
-      
-#       - name: Stop API Service
-#         if: always()
-#         run: |
-#           cd deployment
-#           kill $(cat api.pid) || true
-      
-#       - name: Upload Logs
-#         if: always()
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: api-logs
-#           path: deployment/api.log
-
-#   build-package:
-#     name: Build Deployment Package
-#     runs-on: ubuntu-latest
-#     needs: test-api
-    
-#     steps:
-#       - name: Checkout Repository
-#         uses: actions/checkout@v4
-
-#       - name: Create Required Directories
-#         run: |
-#           mkdir -p deployment/models
-      
-#       - name: Download Model Artifacts
-#         uses: actions/download-artifact@v4
-#         with:
-#           name: production-model
-#           path: deployment/models/
-      
-#       - name: Verify Files Before Packaging
-#         run: |
-#           echo "📋 Files in current directory:"
-#           ls -la
-#           echo ""
-#           echo "📦 Deployment Package Contents:"
-#           tree deployment/ || ls -laR deployment/
-      
-#       - name: Create Deployment Package
-#         run: |
-#           echo "📦 Creating deployment package..."
-          
-#           # Build list of files to include
-#           FILES_TO_PACKAGE="deployment/ requirements*.txt"
-          
-#           # Check if README exists and add to list
-#           if [ -f "README.md" ]; then
-#             FILES_TO_PACKAGE="$FILES_TO_PACKAGE README.md"
-#             echo "✅ README.md found, will include in package"
-#           else
-#             echo "⚠️ README.md not found in root, skipping"
-#           fi
-          
-#           # Create the package with all files at once
-#           tar -czf mlops-deployment-${{ github.run_number }}.tar.gz $FILES_TO_PACKAGE
-          
-#           echo "✅ Package created successfully"
-#           ls -lh mlops-deployment-${{ github.run_number }}.tar.gz
-          
-#           # Show package contents
-#           echo ""
-#           echo "📦 Package contents:"
-#           tar -tzf mlops-deployment-${{ github.run_number }}.tar.gz | head -20
-
-#       - name: Upload Deployment Package
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: deployment-package
-#           path: mlops-deployment-${{ github.run_number }}.tar.gz
-
-#   notify:
-#     name: Notify
-#     runs-on: ubuntu-latest
-#     needs: [setup-model, test-api, build-package]
-#     if: always()
-    
-#     steps:
-#       - name: Send Slack Notification
-#         uses: slackapi/slack-github-action@v1.24.0
-#         with:
-#           payload: |
-#             {
-#               "text": ":rocket: Deployment Finished (Status: ${{ needs.build-package.result }})",
-#               "attachments": [
-#                 {
-#                   "color": "${{ needs.build-package.result == 'success' && 'good' || 'danger' }}",
-#                   "fields": [
-#                     { "title": "Run Number", "value": "${{ github.run_number }}", "short": true },
-#                     { "title": "Serving Endpoint", "value": "credit-risk-model-random_forest-prod", "short": true }
-#                   ]
-#                 }
-#               ]
-#             }
-#         env:
-#           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-
 name: Local MLOps Deployment
 
 on:
@@ -296,10 +28,7 @@ jobs:
       
       - name: Create Required Directories
         run: |
-          echo "📁 Creating deployment directories..."
           mkdir -p deployment/models
-          ls -la deployment/
-          echo "✅ Directories created"
       
       - name: Create .env File
         run: |
@@ -309,25 +38,14 @@ jobs:
           echo "MODEL_ALIAS=Production" >> .env
           echo "USE_SERVING_ENDPOINT=true" >> .env
           echo "SERVING_ENDPOINT_NAME=credit-risk-model-random_forest-prod" >> .env
-          echo "🔎 Using SERVING_ENDPOINT_NAME=$(grep SERVING_ENDPOINT_NAME .env | cut -d'=' -f2)"
-          cat .env
 
       - name: Setup Model (Endpoint or Download)
-        run: |
-          python deployment/pull_production_model.py
+        run: python deployment/pull_production_model.py
 
       - name: Verify Model Setup
         run: |
-          echo "📂 checking deployment/models ..."
-          ls -la deployment/models || echo "⚠️ models folder missing"
-
-          if [ -f "deployment/models/endpoint_config.json" ]; then
-            echo "✅ Serving endpoint configured"
-            cat deployment/models/endpoint_config.json
-          else
+          if [ ! -f "deployment/models/endpoint_config.json" ]; then
             echo "❌ endpoint_config.json not found"
-            echo "📋 Current directory structure:"
-            find deployment -type f || echo "No files found"
             exit 1
           fi
 
@@ -337,6 +55,7 @@ jobs:
           name: production-model
           path: deployment/models/
           retention-days: 7
+
 
   test-api:
     name: Test API Service
@@ -351,25 +70,24 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pip'
-      
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
-      - name: Create Required Directories
-        run: |
-          echo "📁 Creating deployment directories..."
-          mkdir -p deployment/models
-          ls -la deployment/
-      
+
       - name: Download Model Artifacts
         uses: actions/download-artifact@v4
         with:
           name: production-model
-          path: deployment/models/
-      
+          path: deployment/
+
+      - name: Move endpoint files to correct location
+        run: |
+          mkdir -p deployment/models
+          mv deployment/production-model/* deployment/models/ || echo "⚠ Nothing to move"
+          ls -la deployment/models
+
       - name: Create .env File
         run: |
           echo "DATABRICKS_HOST=${{ secrets.DATABRICKS_HOST }}" >> .env
@@ -377,34 +95,19 @@ jobs:
           echo "MODEL_NAME=workspace.ml_credit_risk.credit_risk_model_random_forest" >> .env
           echo "MODEL_ALIAS=Production" >> .env
           echo "USE_SERVING_ENDPOINT=true" >> .env
-          echo "SERVING_ENDPOINT_NAME=credit-risk-model_random_forest-prod" >> .env
           echo "API_HOST=0.0.0.0" >> .env
           echo "API_PORT=8000" >> .env
           cp .env deployment/.env
 
-      - name: Check Model Configuration
-        run: |
-          if [ -f "deployment/models/endpoint_config.json" ]; then
-            echo "Config OK"
-          else
-            echo "❌ Missing Config"
-            exit 1
-          fi
-
-      # ⭐ NEW — start_api.sh added here
       - name: Start API Service (Script Version)
-        run: |
-          bash deployment/start_api.sh
+        run: bash deployment/start_api.sh
 
-      # ⭐ NEW — debug step added here
       - name: Debug API Status
-        run: |
-          bash deployment/debug_api.sh
+        run: bash deployment/debug_api.sh
 
       - name: Test API Functionality
         run: |
-          echo "Testing /model/info..."
-          curl -f http://localhost:8000/model/info | python -m json.tool
+          curl -f http://localhost:8000/health
           python deployment/test_api.py
 
       - name: Stop API Service
@@ -414,11 +117,12 @@ jobs:
           kill $(cat api.pid) || true
 
       - name: Upload Logs
-        if: always()
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: api-logs
           path: deployment/api.log
+
 
   build-package:
     name: Build Deployment Package
@@ -429,21 +133,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Create Required Directories
-        run: |
-          mkdir -p deployment/models
-      
       - name: Download Model Artifacts
         uses: actions/download-artifact@v4
         with:
           name: production-model
           path: deployment/models/
-      
-      - name: Verify Files Before Packaging
-        run: |
-          ls -la
-          tree deployment/ || ls -laR deployment/
-      
+
       - name: Create Deployment Package
         run: |
           tar -czf mlops-deployment-${{ github.run_number }}.tar.gz deployment/ requirements*.txt
@@ -454,19 +149,18 @@ jobs:
           name: deployment-package
           path: mlops-deployment-${{ github.run_number }}.tar.gz
 
+
   notify:
     name: Notify
     runs-on: ubuntu-latest
     needs: [setup-model, test-api, build-package]
     if: always()
-    
+
     steps:
       - name: Send Slack Notification
         uses: slackapi/slack-github-action@v1.24.0
         with:
           payload: |
-            {
-              "text": ":rocket: Deployment Finished (Status: ${{ needs.build-package.result }})"
-            }
+            {"text":":rocket: Deployment Completed!"}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
