--- a/.github/workflows/local-deployment.yml
+++ b/.github/workflows/local-deployment.yml
@@ -7,8 +7,8 @@ env:
   PYTHON_VERSION: '3.10'
 
 jobs:
-  setup-model:
-    name: Setup Production Model
+  verify-model:
+    name: Verify Model Registry Access
     runs-on: ubuntu-latest
 
     steps:
@@ -21,46 +21,45 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
       
-      - name: Install Dependencies
+      - name: Install MLflow
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-deploy.txt
+          pip install mlflow databricks-sdk python-dotenv
       
-      - name: Create Required Directories
+      - name: Verify Model Registry Access
         run: |
-          mkdir -p deployment/models
-      
-      - name: Create .env File
-        run: |
-          echo "DATABRICKS_HOST=${{ secrets.DATABRICKS_HOST }}" >> .env
-          echo "DATABRICKS_TOKEN=${{ secrets.DATABRICKS_TOKEN }}" >> .env
-          echo "MODEL_NAME=workspace.ml_credit_risk.credit_risk_model_random_forest" >> .env
-          echo "MODEL_ALIAS=Production" >> .env
-          echo "USE_SERVING_ENDPOINT=true" >> .env
-          echo "SERVING_ENDPOINT_NAME=credit-risk-model-random_forest-prod" >> .env
-
-      - name: Setup Model (Endpoint or Download)
-        run: python deployment/pull_production_model.py
-
-      - name: Verify Model Setup
-        run: |
-          if [ ! -f "deployment/models/endpoint_config.json" ]; then
-            echo "❌ endpoint_config.json not found"
-            exit 1
-          fi
-
-      - name: Upload Model Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: production-model
-          path: deployment/models/
-          retention-days: 7
-
+          python << 'EOF'
+          import os
+          import mlflow
+          from mlflow.tracking import MlflowClient
+          
+          # Set credentials
+          os.environ['DATABRICKS_HOST'] = '${{ secrets.DATABRICKS_HOST }}'
+          os.environ['DATABRICKS_TOKEN'] = '${{ secrets.DATABRICKS_TOKEN }}'
+          
+          # Configure MLflow
+          mlflow.set_tracking_uri("databricks")
+          mlflow.set_registry_uri("databricks-uc")
+          
+          # Verify model exists
+          model_name = "workspace.ml_credit_risk.credit_risk_model_random_forest"
+          model_alias = "Production"
+          
+          print(f"🔍 Checking model: {model_name} @ {model_alias}")
+          
+          client = MlflowClient()
+          mv = client.get_model_version_by_alias(model_name, model_alias)
+          
+          print(f"✅ Model found!")
+          print(f"   Version: {mv.version}")
+          print(f"   Status: {mv.status}")
+          print(f"   Run ID: {mv.run_id}")
+          EOF
 
   test-api:
     name: Test API Service
     runs-on: ubuntu-latest
-    needs: setup-model
+    needs: verify-model
     
     steps:
       - name: Checkout Repository
@@ -70,59 +69,85 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Download Model Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: production-model
-          path: deployment/
-
-      - name: Move endpoint files to correct location
-        run: |
-          mkdir -p deployment/models
-          mv deployment/production-model/* deployment/models/ || echo "⚠ Nothing to move"
-          ls -la deployment/models
-
       - name: Create .env File
         run: |
-          echo "DATABRICKS_HOST=${{ secrets.DATABRICKS_HOST }}" >> .env
-          echo "DATABRICKS_TOKEN=${{ secrets.DATABRICKS_TOKEN }}" >> .env
-          echo "MODEL_NAME=workspace.ml_credit_risk.credit_risk_model_random_forest" >> .env
-          echo "MODEL_ALIAS=Production" >> .env
-          echo "USE_SERVING_ENDPOINT=true" >> .env
-          echo "API_HOST=0.0.0.0" >> .env
-          echo "API_PORT=8000" >> .env
-          cp .env deployment/.env
+          echo "DATABRICKS_HOST=${{ secrets.DATABRICKS_HOST }}" >> deployment/.env
+          echo "DATABRICKS_TOKEN=${{ secrets.DATABRICKS_TOKEN }}" >> deployment/.env
+          echo "MODEL_NAME=workspace.ml_credit_risk.credit_risk_model_random_forest" >> deployment/.env
+          echo "MODEL_ALIAS=Production" >> deployment/.env
+          echo "API_HOST=0.0.0.0" >> deployment/.env
+          echo "API_PORT=8000" >> deployment/.env
 
-      - name: Start API Service (Script Version)
-        run: bash deployment/start_api.sh
-
-      - name: Debug API Status
-        run: bash deployment/debug_api.sh
-
-      - name: Test API Functionality
+      - name: Start API Service
         run: |
-          curl -f http://localhost:8000/health
+          cd deployment
+          nohup python app.py > api.log 2>&1 &
+          echo $! > api.pid
+          
+          # Wait for API to start (model loading takes time)
+          echo "⏳ Waiting for API to start (30 seconds)..."
+          sleep 30
+
+      - name: Check API Status
+        run: |
+          cd deployment
+          
+          # Check if process is running
+          if ! ps -p $(cat api.pid) > /dev/null 2>&1; then
+            echo "❌ API process died"
+            echo "Last 50 lines of log:"
+            tail -50 api.log
+            exit 1
+          fi
+          
+          echo "✅ API process is running"
+
+      - name: Test Health Endpoint
+        run: |
+          for i in {1..10}; do
+            if curl -f http://localhost:8000/health; then
+              echo "✅ Health check passed"
+              exit 0
+            fi
+            echo "Attempt $i/10..."
+            sleep 3
+          done
+          
+          echo "❌ Health check failed"
+          cat deployment/api.log
+          exit 1
+
+      - name: Test Model Info Endpoint
+        run: |
+          echo "Testing /model/info endpoint..."
+          curl -f http://localhost:8000/model/info | python -m json.tool
+
+      - name: Run Full API Tests
+        run: |
+          echo "Running comprehensive API tests..."
           python deployment/test_api.py
 
       - name: Stop API Service
         if: always()
         run: |
           cd deployment
-          kill $(cat api.pid) || true
+          if [ -f api.pid ]; then
+            kill $(cat api.pid) 2>/dev/null || true
+          fi
 
-      - name: Upload Logs
-        uses: actions/upload-artifact@v4
+      - name: Upload API Logs
         if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: api-logs
           path: deployment/api.log
-
 
   build-package:
     name: Build Deployment Package
@@ -133,15 +158,36 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Download Model Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: production-model
-          path: deployment/models/
-
       - name: Create Deployment Package
         run: |
-          tar -czf mlops-deployment-${{ github.run_number }}.tar.gz deployment/ requirements*.txt
+          echo "📦 Creating deployment package..."
+          
+          # Files to include
+          FILES="deployment/ requirements.txt requirements-deploy.txt"
+          
+          # Add README if exists
+          if [ -f "README.md" ]; then
+            FILES="$FILES README.md"
+          fi
+          
+          # Add scripts
+          if [ -f "start_api.sh" ]; then
+            FILES="$FILES start_api.sh"
+          fi
+          
+          if [ -f "deploy_local.sh" ]; then
+            FILES="$FILES deploy_local.sh"
+          fi
+          
+          if [ -f "debug_api.sh" ]; then
+            FILES="$FILES debug_api.sh"
+          fi
+          
+          # Create package
+          tar -czf mlops-deployment-${{ github.run_number }}.tar.gz $FILES
+          
+          echo "✅ Package created"
+          ls -lh mlops-deployment-${{ github.run_number }}.tar.gz
 
       - name: Upload Deployment Package
         uses: actions/upload-artifact@v4
@@ -149,18 +195,77 @@ jobs:
           name: deployment-package
           path: mlops-deployment-${{ github.run_number }}.tar.gz
 
+      - name: Package Summary
+        run: |
+          echo "📦 Package Contents:"
+          tar -tzf mlops-deployment-${{ github.run_number }}.tar.gz | head -20
 
   notify:
     name: Notify
     runs-on: ubuntu-latest
-    needs: [setup-model, test-api, build-package]
+    needs: [verify-model, test-api, build-package]
     if: always()
 
     steps:
+      - name: Determine Status
+        id: status
+        run: |
+          if [ "${{ needs.verify-model.result }}" == "success" ] && \
+             [ "${{ needs.test-api.result }}" == "success" ] && \
+             [ "${{ needs.build-package.result }}" == "success" ]; then
+            echo "status=success" >> $GITHUB_OUTPUT
+            echo "color=good" >> $GITHUB_OUTPUT
+            echo "emoji=:white_check_mark:" >> $GITHUB_OUTPUT
+          else
+            echo "status=failure" >> $GITHUB_OUTPUT
+            echo "color=danger" >> $GITHUB_OUTPUT
+            echo "emoji=:x:" >> $GITHUB_OUTPUT
+          fi
+
       - name: Send Slack Notification
+        if: vars.SLACK_WEBHOOK_URL != ''
         uses: slackapi/slack-github-action@v1.24.0
         with:
           payload: |
-            {"text":":rocket: Deployment Completed!"}
+            {
+              "text": "${{ steps.status.outputs.emoji }} MLOps Deployment Completed",
+              "attachments": [
+                {
+                  "color": "${{ steps.status.outputs.color }}",
+                  "fields": [
+                    {
+                      "title": "Status",
+                      "value": "${{ steps.status.outputs.status }}",
+                      "short": true
+                    },
+                    {
+                      "title": "Run Number",
+                      "value": "${{ github.run_number }}",
+                      "short": true
+                    },
+                    {
+                      "title": "Mode",
+                      "value": "Model Registry (Direct)",
+                      "short": true
+                    },
+                    {
+                      "title": "Model",
+                      "value": "credit_risk_model_random_forest",
+                      "short": true
+                    }
+                  ]
+                }
+              ]
+            }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      
+      - name: Print Summary
+        run: |
+          echo "======================================"
+          echo "🚀 Deployment Summary"
+          echo "======================================"
+          echo "Status: ${{ steps.status.outputs.status }}"
+          echo "Run Number: ${{ github.run_number }}"
+          echo "Mode: Model Registry (Direct)"
+          echo "======================================"
